--- a/index.html
+++ b/index.html
@@ -18,17 +18,33 @@
 
   <body>
 
-    
- 
-<div class="container-fluid">
+    <div class="container-fluid">
+  <button id="list" class="btn" data-toggle="modal" data-target="#fav-modal">
+    <span class="glyphicon glyphicon-heart"></span>
+    <span class="badge">0</span>
+  </button>
   <div id="quote-layout">
     <div id="content">
       <h1 id="quote"><strong>Loading...</strong></h1>
       <h4 id="author">Loading...</h4>
+      <button id="heart" class="btn"><span class='glyphicon glyphicon-heart'></span></button>
     </div>
-    <button id='generate' class="btn"> Generate
-    </button>
-    <button id="heart" class="btn"><span class='glyphicon glyphicon-heart'></span></button>
+  </div>
+
+  <div id="fav-modal" class="modal fade">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1>Favorites</h1>
+        </div>
+        <div class="modal-body">
+          <button type="button" class="btn btn-lg" data-toggle="popover" title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?">Click to toggle popover</button>
+        </div>
+        <div class="modal-footer">
+        </div>
+
+      </div>
+    </div>
   </div>
 </div>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
